Added wishlist module

--- a/OnlineStoreApp/gradle/libs.versions.toml
+++ b/OnlineStoreApp/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ kotlinSerialization = "2.0.21"
 playServicesMaps = "19.0.0"
 hilt = "2.52"
 ksp = "2.0.21-1.0.27"
+room = "2.6.1"
 savedstateKtx = "1.2.1"
 timber = "5.0.1"
 places = "4.0.0"
@@ -51,6 +52,9 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationComposeVersion" }
 androidx-lifecycle-runtime-compose-v270 = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 androidx-navigation-compose-v280alpha08 = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-savedstate-ktx = { module = "androidx.savedstate:savedstate-ktx", version.ref = "savedstateKtx" }
 coil = { module = "io.coil-kt:coil", version.ref = "coilVersion" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilVersion" }
@@ -92,3 +96,4 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 google-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlincompose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+roomPlugin  = { id = "androidx.room", version.ref = "room" }
