Added all the modules

--- a/OnlineStoreApp/app/src/main/AndroidManifest.xml
+++ b/OnlineStoreApp/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.OnlineStoreApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.OnlineStoreApp">
             <intent-filter>
