--- a/OnlineStoreApp/gradle/libs.versions.toml
+++ b/OnlineStoreApp/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ room = "2.6.1"
 timber = "5.0.1"
 material = "1.12.0"
 okhttp = "4.12.0"
+navigationRuntimeKtx = "2.8.3"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -72,6 +73,7 @@ google-dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-androi
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
