--- a/OnlineStoreApp/app/src/main/AndroidManifest.xml
+++ b/OnlineStoreApp/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OnlineStoreApp"
-        tools:targetApi="31">
+        android:theme="@style/Theme.OnlineStoreApp">
         <activity
             android:name=".presentation.main.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.OnlineStoreApp">
+            android:theme="@style/Theme.OnlineStoreApp"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
