--- a/OnlineStoreApp/gradle/libs.versions.toml
+++ b/OnlineStoreApp/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ agp = "8.7.2"
 animation = "1.7.5"
 coilVersion = "2.7.0"
 converterGson = "2.11.0"
+coreTesting = "2.2.0"
 datastorePreferences = "1.1.1"
 detektGradlePlugin = "1.23.7"
 detektVersion = "0.4.17"
@@ -15,6 +16,7 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 kotlinStdlib = "2.0.21"
 kotlinxCoroutinesAndroid = "1.9.0"
+kotlinxCoroutinesTest = "1.9.0"
 kotlinxSerializationJson = "1.7.3"
 lifecycleRuntimeCompose = "2.8.7"
 activityCompose = "1.9.3"
@@ -22,11 +24,13 @@ composeBom = "2024.11.00"
 appcompat = "1.7.0"
 detekt = "1.23.7"
 immutableCollections = "0.3.8"
+mockk = "1.13.13"
 navigationCompose = "2.8.4"
 ktlint = "11.1.0"
 kotlinSerialization = "2.0.21"
 hilt = "2.52"
-ksp = "2.0.21-1.0.27"
+ksp = "2.0.21-1.0.28"
+orgJacocoCore = "0.8.11"
 room = "2.6.1"
 timber = "5.0.1"
 material = "1.12.0"
@@ -42,6 +46,7 @@ androidx-compose-ui-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 androidx-compose-ui-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-compose-material3-material3 = { module = "androidx.compose.material3:material3" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationComposeVersion" }
 androidx-lifecycle-runtime-compose-v270 = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
@@ -65,8 +70,12 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 kotlin-stdlib-v1924 = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinStdlib" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 immutable-collections = { group = "org.jetbrains.kotlinx", name = "kotlinx-collections-immutable", version.ref = "immutableCollections" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockk" }
+org-jacoco-core = { module = "org.jacoco:org.jacoco.core", version.ref = "orgJacocoCore" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterGson" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 google-dagger-hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
