added ui test for app intro

--- a/OnlineStoreApp/gradle/libs.versions.toml
+++ b/OnlineStoreApp/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ coreTesting = "2.2.0"
 datastorePreferences = "1.1.1"
 detektGradlePlugin = "1.23.7"
 detektVersion = "0.4.17"
+hiltAndroidCompiler = "2.51.1"
+hiltAndroidTesting = "2.52"
 hiltNavigationComposeVersion = "1.2.0"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
@@ -59,6 +61,8 @@ coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilVersion"
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 detekt = { module = "io.nlopez.compose.rules:detekt", version.ref = "detektVersion" }
 detekt-gradle-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detektGradlePlugin" }
+hilt-android-compiler-v2511 = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompiler" }
+hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hiltAndroidTesting" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
