--- a/OnlineStoreApp/gradle/libs.versions.toml
+++ b/OnlineStoreApp/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanistPermissions = "0.36.0"
-agp = "8.7.2"
+agp = "8.7.3"
 animation = "1.7.5"
 coilVersion = "2.7.0"
 converterGson = "2.11.0"
@@ -8,7 +8,7 @@ coreTesting = "2.2.0"
 datastorePreferences = "1.1.1"
 detektGradlePlugin = "1.23.7"
 detektVersion = "0.4.17"
-hiltAndroidCompiler = "2.51.1"
+hiltAndroidCompiler = "2.52"
 hiltAndroidTesting = "2.52"
 hiltNavigationComposeVersion = "1.2.0"
 kotlin = "2.0.21"
@@ -39,6 +39,7 @@ material = "1.12.0"
 okhttp = "4.12.0"
 navigationRuntimeKtx = "2.8.4"
 playServicesAnalyticsImpl = "18.2.0"
+paparazzi = "1.3.5"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -101,3 +102,4 @@ google-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hil
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlincompose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 roomPlugin  = { id = "androidx.room", version.ref = "room" }
+paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
