--- a/OnlineStoreApp/gradle/libs.versions.toml
+++ b/OnlineStoreApp/gradle/libs.versions.toml
@@ -40,8 +40,9 @@ okhttp = "5.1.0"
 navigationRuntimeKtx = "2.9.5"
 playServicesAnalyticsImpl = "18.2.0"
 paparazzi = "1.3.5"
-navigation3 = "1.0.0-alpha01"
+navigation3 = "1.0.0-alpha10"
 navigation3Runtime = "1.0.0-alpha10"
+lifecycleViewmodelNav3 = "1.0.0-alpha01"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -94,7 +95,7 @@ androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navig
 play-services-analytics-impl = { group = "com.google.android.gms", name = "play-services-analytics-impl", version.ref = "playServicesAnalyticsImpl" }
 androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "navigation3" }
 androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "navigation3" }
-navigation3-runtime = { group = "androidx.navigation3", name = "navigation3-runtime", version.ref = "navigation3Runtime" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycleViewmodelNav3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
